maze.lessons.maze.island.IslandMaze.scala.error
Escaper:53: error: Unmatched closing brace '}' ignored here
}
^